--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
+/*.Paleta{
+    width: 20%;
+    height: 30%;
+    background-color: #f4f4f4;
+}*/
+
 .color-display {
     font-size: 25px;
     margin: 10px 0;
